--- a/license/index.html
+++ b/license/index.html
@@ -2,18 +2,18 @@
 <head>
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge">
-<title>squaredcow.dev</title>
+<title> | squaredcow.dev</title>
 <meta name=description content="As a reader of my sorts, this is me moving towards the world of writing. With time I realized that each new learning takes time from us. The way I see it, the last piece to complete the exchange is to write it down. No more drafts left unfinished! That said, dear reader: Welcome!">
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta name=robots content="all,follow">
 <meta name=googlebot content="index,follow,snippet,archive">
-<meta property="og:title" content="Categories">
-<meta property="og:description" content="As a reader of my sorts, this is me moving towards the world of writing. With time I realized that each new learning takes time from us. The way I see it, the last piece to complete the exchange is to write it down. No more drafts left unfinished! That said, dear reader: Welcome!">
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://squaredcow.dev/categories/">
+<meta property="og:title" content>
+<meta property="og:description" content="Copyright © 2021 Luis Vaca All work done by the author is under dual-license. All the source code, is covered by the MIT License. All content and materials such as images, audios, records, etc. are covered by Creative Commons Attribution-ShareAlike 4.0 International License.">
+<meta property="og:type" content="article">
+<meta property="og:url" content="https://squaredcow.dev/license/"><meta property="article:section" content>
 <meta name=twitter:card content="summary">
-<meta name=twitter:title content="Categories">
-<meta name=twitter:description content="As a reader of my sorts, this is me moving towards the world of writing. With time I realized that each new learning takes time from us. The way I see it, the last piece to complete the exchange is to write it down. No more drafts left unfinished! That said, dear reader: Welcome!">
+<meta name=twitter:title content>
+<meta name=twitter:description content="Copyright © 2021 Luis Vaca All work done by the author is under dual-license. All the source code, is covered by the MIT License. All content and materials such as images, audios, records, etc. are covered by Creative Commons Attribution-ShareAlike 4.0 International License.">
 <link rel=stylesheet href=https://squaredcow.dev/css/style-white.css><!--[if lt IE 9]><script src=https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js></script>
 <script src=https://oss.maxcdn.com/respond/1.4.2/respond.min.js></script><![endif]-->
 <link rel=icon type=image/png href=https://squaredcow.dev/images/favicon.ico>
@@ -43,15 +43,10 @@
 </header>
 <article class=post itemscope itemtype=http://schema.org/BlogPosting>
 <div class=content itemprop=articleBody>
-<div id=categories>
-<div class=category-list-title>
-No categories
-</div>
-<div class=category-list>
-<ul class=category-list>
-</ul>
-</div>
-</div>
+<h2 id=copyright--2021-luis-vaca>Copyright © 2021 Luis Vaca</h2>
+<p>All work done by the author is under dual-license. All the source code, is covered by the MIT License. All content and materials such as images, audios, records, etc. are covered by Creative Commons Attribution-ShareAlike 4.0 International License.</p>
+<p><a href=https://opensource.org/licenses/MIT><img src=https://img.shields.io/badge/License-MIT-green.svg alt="License: MIT"></a></p>
+<p><a href=https://creativecommons.org/licenses/by-sa/4.0/><img src=https://img.shields.io/badge/License-CC%20BY--SA%204.0-blue.svg alt="License: CC BY-SA 4.0"></a></p>
 </div>
 </article>
 <footer id=footer>
