--- a/license/index.html
+++ b/license/index.html
@@ -1,75 +1,5 @@
-<!doctype html><html lang=en-us>
-<head>
-<meta charset=utf-8>
-<meta http-equiv=x-ua-compatible content="IE=edge">
-<title> | squaredcow.dev</title>
-<meta name=description content="As a reader of many sorts, this is me moving towards the world of writing. With time I realized that each new learning takes time from us. The way I see it, the last piece to complete the exchange is to write it down. No more drafts left unfinished! That said, dear reader: Welcome!">
-<meta name=viewport content="width=device-width,initial-scale=1">
-<meta name=robots content="all,follow">
-<meta name=googlebot content="index,follow,snippet,archive">
-<meta property="og:title" content>
-<meta property="og:description" content="Copyright © 2021 Luis Vaca All work done by the author is under dual-license. All the source code, is covered by the MIT License. All content and materials such as images, audios, records, etc. are covered by Creative Commons Attribution-ShareAlike 4.0 International License.">
-<meta property="og:type" content="article">
-<meta property="og:url" content="https://squaredcow.dev/license/"><meta property="article:section" content>
-<meta name=twitter:card content="summary">
-<meta name=twitter:title content>
-<meta name=twitter:description content="Copyright © 2021 Luis Vaca All work done by the author is under dual-license. All the source code, is covered by the MIT License. All content and materials such as images, audios, records, etc. are covered by Creative Commons Attribution-ShareAlike 4.0 International License.">
-<link rel=stylesheet href=https://squaredcow.dev/css/style-white.css><!--[if lt IE 9]><script src=https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js></script>
-<script src=https://oss.maxcdn.com/respond/1.4.2/respond.min.js></script><![endif]-->
-<link rel=icon type=image/png href=https://squaredcow.dev/images/favicon.ico>
-<link disabled id=dark-mode-theme rel=stylesheet href=/css/style-dark.css>
-</head>
-<body class="max-width mx-auto px3 ltr">
-<div class="content index py4">
-<header id=header>
-<a href=https://squaredcow.dev/>
-<div id=logo style=background-image:url(https://squaredcow.dev/images/logo.png)></div>
-<div id=title>
-<h1>squaredcow.dev</h1>
-</div>
-</a>
-<div id=nav>
-<ul>
-<li class=icon>
-<a href=# aria-label=Menu><i class="fas fa-bars fa-2x" aria-hidden=true></i></a>
-</li>
-<li><a href=/>Home</a></li>
-<li><a href=/posts>Blog</a></li>
-<li><a href=/author>Author</a></li>
-<li><a href=/tags>Tags</a></li>
-<li><a href=/license>License</a></li>
-</ul>
-</div>
-</header>
-<article class=post itemscope itemtype=http://schema.org/BlogPosting>
-<div class=content itemprop=articleBody>
-<h2 id=copyright--2021-luis-vaca>Copyright © 2021 Luis Vaca</h2>
-<p>All work done by the author is under dual-license. All the source code, is covered by the MIT License. All content and materials such as images, audios, records, etc. are covered by Creative Commons Attribution-ShareAlike 4.0 International License.</p>
-<p><a href=https://opensource.org/licenses/MIT><img src=https://img.shields.io/badge/License-MIT-green.svg alt="License: MIT"></a></p>
-<p><a href=https://creativecommons.org/licenses/by-sa/4.0/><img src=https://img.shields.io/badge/License-CC%20BY--SA%204.0-blue.svg alt="License: CC BY-SA 4.0"></a></p>
-</div>
-</article>
-<footer id=footer>
-<div class=footer-left>
-Copyright &copy; 2021 © Luis Vaca
+<!doctype html><html lang=en-us><head><meta charset=utf-8><meta http-equiv=x-ua-compatible content="IE=edge"><title>| squaredcow.dev</title><meta name=description content="As a reader of many sorts, this is me moving towards the world of writing. With time I realized that each new learning takes time from us. The way I see it, the last piece to complete the exchange is to write it down. No more drafts left unfinished! That said, dear reader: Welcome!"><meta name=viewport content="width=device-width,initial-scale=1"><meta name=robots content="all,follow"><meta name=googlebot content="index,follow,snippet,archive"><meta property="og:title" content><meta property="og:description" content="Copyright © 2023 Luis Vaca All work done by the author is under dual-license. All the source code, is covered by the MIT License. All content and materials such as images, audios, records, etc. are covered by Creative Commons Attribution-ShareAlike 4.0 International License."><meta property="og:type" content="article"><meta property="og:url" content="https://squaredcow.dev/license/"><meta property="article:section" content><meta name=twitter:card content="summary"><meta name=twitter:title content><meta name=twitter:description content="Copyright © 2023 Luis Vaca All work done by the author is under dual-license. All the source code, is covered by the MIT License. All content and materials such as images, audios, records, etc. are covered by Creative Commons Attribution-ShareAlike 4.0 International License."><link rel=stylesheet href=https://squaredcow.dev/css/style-white.css><!--[if lt IE 9]><script src=https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js></script>
+<script src=https://oss.maxcdn.com/respond/1.4.2/respond.min.js></script><![endif]--><link rel=icon type=image/png href=https://squaredcow.dev/images/favicon.ico><link disabled id=dark-mode-theme rel=stylesheet href=/css/style-dark.css></head><body class="max-width mx-auto px3 ltr"><div class="content index py4"><header id=header><a href=https://squaredcow.dev/><div id=logo style=background-image:url(https://squaredcow.dev/images/logo.png)></div><div id=title><h1>squaredcow.dev</h1></div></a><div id=nav><ul><li class=icon><a href=# aria-label=Menu><i class="fas fa-bars fa-2x" aria-hidden=true></i></a></li><li><a href=/>Home</a></li><li><a href=/posts>Blog</a></li><li><a href=/author>Author</a></li><li><a href=/tags>Tags</a></li><li><a href=/license>License</a></li></ul></div></header><article class=post itemscope itemtype=http://schema.org/BlogPosting><div class=content itemprop=articleBody><h2 id=copyright--2023-luis-vaca>Copyright © 2023 Luis Vaca</h2><p>All work done by the author is under dual-license. All the source code, is covered by the MIT License. All content and materials such as images, audios, records, etc. are covered by Creative Commons Attribution-ShareAlike 4.0 International License.</p><p><a href=https://opensource.org/licenses/MIT><img src=https://img.shields.io/badge/License-MIT-green.svg alt="License: MIT"></a></p><p><a href=https://creativecommons.org/licenses/by-sa/4.0/><img src=https://img.shields.io/badge/License-CC%20BY--SA%204.0-blue.svg alt="License: CC BY-SA 4.0"></a></p></div></article><footer id=footer><div class=footer-left>Copyright &copy; 2023 © Luis Vaca
 &nbsp;&ndash;&nbsp;
-<i class="fas fa-moon" id=dark-mode-toggle aria-hidden=true></i>
-</div>
-<div class=footer-right>
-<nav>
-<ul>
-<li><a href=/>Home</a></li>
-<li><a href=/posts>Blog</a></li>
-<li><a href=/author>Author</a></li>
-<li><a href=/tags>Tags</a></li>
-<li><a href=/license>License</a></li>
-</ul>
-</nav>
-</div>
-</footer>
-</div>
-</body>
-<link rel=stylesheet href=/lib/font-awesome/css/all.min.css>
-<script src=/lib/jquery/jquery.min.js></script>
-<script src=/js/main.js></script>
-</html>
+<i class="fas fa-moon" id=dark-mode-toggle aria-hidden=true></i></div><div class=footer-right><nav><ul><li><a href=/>Home</a></li><li><a href=/posts>Blog</a></li><li><a href=/author>Author</a></li><li><a href=/tags>Tags</a></li><li><a href=/license>License</a></li></ul></nav></div></footer></div></body><link rel=stylesheet href=/lib/font-awesome/css/all.min.css><script src=/lib/jquery/jquery.min.js></script>
+<script src=/js/main.js></script></html>
